--- a/package.json
+++ b/package.json
@@ -6,20 +6,40 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint":"eslint . --ext .js"
+    "lint": "eslint --ignore-path .eslintignore",
+    "fix":"yarn run lint --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+      "src/**/*.{js}": [
+        "yarn run fix",
+        "git add"
+      ]
   },
   "dependencies": {
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "husky": "^5.0.9",
+    "lint-staged": "^10.5.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-paper": "^4.7.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "eslint": "^7.20.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1"
   },
   "private": true
