--- a/.eslintrc
+++ b/.eslintrc
@@ -1,28 +1,8 @@
 {
     "extends": [
-        "@react-native-community",
-        "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:prettier/recommended",
-        "plugin:import/errors",
-        "plugin:import/warnings"
+        "@react-native-community"
     ],
     "rules": {
-        "react/prop-types": "off",
-        "no-console": "error",
-        "no-alert": "error",
-        "react/display-name": 0,
-        "react-hooks/exhaustive-deps": 0,
-        "sort-imports": "off",
-        "prettier/prettier": "error",
-        "import/first": "error",
-        "import/no-duplicates": "error",
-        "react/jsx-no-target-blank": 0,
-        "no-unused-vars": "error",
-        "no-useless-return": "error",
-        "no-return-await": "error",
-        "no-else-return": "error",
-        "no-async-promise-executor": 0,
-        "import/no-named-as-default": 0
-      }
+        "quotes" : [2,"double",{"avoidEscape":true}]
+    }
 }
