--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint --ignore-path .eslintignore",
+    "lint": "eslint . --ignore-path .eslintignore",
     "fix":"yarn run lint --fix"
   },
   "husky": {
@@ -35,11 +35,6 @@
     "@babel/core": "~7.9.0",
     "@react-native-community/eslint-config": "^2.0.0",
     "eslint": "^7.20.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.2.1"
   },
   "private": true
