--- a/package.json
+++ b/package.json
@@ -6,25 +6,10 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "lint": "eslint . --ignore-path .eslintignore",
-    "fix": "yarn run lint --fix"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "yarn run fix",
-      "git add"
-    ]
   },
   "dependencies": {
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
-    "husky": "^5.0.9",
-    "lint-staged": "^10.5.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -32,10 +17,7 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "eslint": "^7.20.0",
-    "prettier": "^2.2.1"
+    "@babel/core": "~7.9.0"
   },
   "private": true
 }
